--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,17 @@ android {
     }
 
     packagingOptions{
-        exclude 'META-INF/notice.txt'
-        exclude 'META-INF/license.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/LICENSE'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/LGPL2.1'
+        exclude 'META-INF/NOTICE.txt'
         exclude 'META-INF/NOTICE'
+        exclude 'META-INF/notice.txt'
     }
 }
 
@@ -31,4 +38,6 @@ dependencies {
     compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
 	compile 'com.fasterxml.jackson.core:jackson-core:2.5.3'
+    compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.0'
+
 }
