--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,13 @@
         </activity>
         <activity
             android:name=".views.sale.SummaryActivity"
-            android:label="@string/title_activity_summary" >
+            android:label="@string/title_activity_summary"
+            android:windowSoftInputMode="adjustPan">
         </activity>
         <activity
             android:name=".views.sale.OraletTeaActivity"
-            android:label="@string/title_activity_oralet_tea" >
+            android:label="@string/title_activity_oralet_tea"
+            android:windowSoftInputMode="adjustPan">
         </activity>
 
         <activity
@@ -40,7 +42,8 @@
         </activity>
         <activity
             android:name=".views.sale.TeaActivity"
-            android:label="@string/title_activity_tea" >
+            android:label="@string/title_activity_tea"
+            android:windowSoftInputMode="adjustPan">
         </activity>
     </application>
 
