--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,17 @@
     package="com.tr.cay.dagdem" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.BLUETOOTH" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:windowSoftInputMode="stateHidden"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,14 +23,13 @@
         <activity
             android:name=".views.sale.SummaryActivity"
             android:label="@string/title_activity_summary"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
             android:name=".views.sale.OraletTeaActivity"
             android:label="@string/title_activity_oralet_tea"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="adjustPan" >
         </activity>
-
         <activity
             android:name=".views.payment.PaymentActivity"
             android:label="@string/title_activity_payment" >
@@ -43,7 +41,11 @@
         <activity
             android:name=".views.sale.TeaActivity"
             android:label="@string/title_activity_tea"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
+        <activity
+            android:name=".views.CustomerPaymentActivity"
+            android:label="@string/title_activity_customer_payment" >
         </activity>
     </application>
 
